# aubo

devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: aubo_description.pc  aubo_robot.pc
devel/share/aubo_description/cmake/: aubo_descriptionConfig.cmake
devel/share/aubo_robot/cmake/: aubo_robotConfig.cmake
src/aubo_description/: CMakeLists.txt
src/aubo_description/meshes/aubo_i20/visual/: link0.3ds  link0.DAE  link1.3ds  link1.DAE  link2.3ds  link3.3ds  link3.DAE  link4.3ds  link4.DAE  link5.3ds  link5.DAE  link6.3ds  link6.DAE
src/aubo_description/meshes/aubo_i7/visual/: link0.DAE  link1.DAE  link2.DAE  link3.DAE  link4.DAE  link5.DAE  link6.DAE
src/aubo_description/meshes/aubo_iS20/visual/: link0.DAE  link1.DAE  link2.DAE  link3.DAE  link4.DAE  link5.DAE  link6.DAE
src/aubo_description/urdf/: aubo_i5.xacro
src/aubo_robot/: CMakeLists.txt  package.xml
src/aubo_robot/launch/: aubo_robot.launch
src/aubo_robot/rviz/: aubo_robot.rviz
